# pythonProject

./: .gitignore  README.md  auth.py  database_models.py  db.py  logger_setup.py  main.py  models.py  pyproject.toml
services/: product_service.py
